added configuration