@@ -103,6 +103,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>3.0.0-M4</version>
+	 <configuration>
+    <forkCount>3</forkCount>
+    <reuseForks>true</reuseForks>
+    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+  </configuration>
       </plugin>
     </plugins>
     </reporting>
